--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
+    <ul id="numberList"></ul>
     <script src="./JS/script.js"></script>
     
 </body>
